--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Jonathan Gerhardson - Portfolio</title>
     <!-- Tailwind CSS for styling the page -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Font from the original SVG -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Alfa+Slab+One&display=swap" rel="stylesheet">
     
     <style>
         /* General Page Styles */
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             background-color: #f3f4f6; /* A light gray background for the whole page */
         }
 
@@ -98,7 +94,7 @@
     <header class="bg-gray-800 text-white p-6 shadow-lg">
         <div class="container mx-auto text-center">
             <h1 class="text-4xl font-bold">Jonathan Gerhardson</h1>
-            <p class="mt-2 text-xl text-gray-300">Investigative Journalist & Developer</p>
+            <p class="mt-2 text-xl text-gray-300"> "Journalist"t</p>
         </div>
     </header>
 
@@ -108,29 +104,21 @@
         <!-- Bio Section -->
         <section id="bio" class="bg-white p-8 rounded-lg shadow-md mb-12">
             <h2 class="text-3xl font-bold text-gray-900 border-b pb-3 mb-4">About Me</h2>
-            <!-- 
-            *************************************************
-            * *
-            * WRITE YOUR BIO HERE!                        *
-            * Replace the text inside the <p> tag below.  *
-            * *
-            *************************************************
-            -->
             <p class="text-lg text-gray-700 leading-relaxed">
 Jonathan Gerhardson is a journalist and writer based in Massachuestts. <br>
-<a href="https://muckrack.com/jonathan-gerhardson/articles">Find my recent bylines here.</a> <br>
+<a href="https://muckrack.com/jonathan-gerhardson/articles" class="text-blue-600 hover:text-blue-800">Find my recent bylines here.</a> <br>
 
-I self publish some notes and shoter stories at <a href="jonathangerhardson.substack.com">jonathangerhardson.substack.com</a> <br>
-Browse my publlic records repository at <a href="https://archive.org/details/@jgerhardson">The Internet Archive</a> <br>
-Look at some dumb vibe coded software I've made at <a href="https://github.com/JonGerhardson"> https://github.com/JonGerhardson</a> <br>
-Follow me on bsky <a href="https://bsky.app/profile/jongerhardson.bsky.social">@jongerhardson</a> <br>
+I self publish some notes and shoter stories at <a href="https://jonathangerhardson.substack.com" class="text-blue-600 hover:text-blue-800">jonathangerhardson.substack.com</a> <br>
+Browse my publlic records repository at <a href="https://archive.org/details/@jgerhardson" class="text-blue-600 hover:text-blue-800">The Internet Archive</a> <br>
+Look at some dumb vibe coded software I've made at <a href="https://github.com/JonGerhardson" class="text-blue-600 hover:text-blue-800"> github.com/JonGerhardson</a> <br>
+Follow me on bsky <a href="https://bsky.app/profile/jongerhardson.bsky.social" class="text-blue-600 hover:text-blue-800">@jongerhardson</a> <br>
 
       </p>
         </section>
 
         <!-- Business Card Project Section -->
         <section id="project-business-cards" class="bg-white p-8 rounded-lg shadow-md">
-            <h2 class="text-3xl font-bold text-gray-900 border-b pb-3 mb-6">Project: Editable Business Cards</h2>
+            <h2 class="text-3xl font-bold text-gray-900 border-b pb-3 mb-6">Print my business card or make your own</h2>
             
             <!-- This is the header for the application itself -->
             <div class="bg-gray-100 p-4 shadow-md rounded-lg print:hidden sticky top-0 z-10 flex flex-wrap justify-between items-center mb-6">
@@ -341,7 +329,7 @@ Follow me on bsky <a href="https://bsky.app/profile/jongerhardson.bsky.social">@
             return `
                 <svg viewBox="0 0 336 192" xmlns="http://www.w3.org/2000/svg">
                     <rect width="336" height="192" fill="#FFFFFF"/>
-                    <g font-family="'Alfa Slab One', cursive">
+                    <g font-family="Georgia, serif">
                         ${textElements}
                     </g>
                 </svg>
