--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <header class="bg-gray-800 text-white p-6 shadow-lg">
         <div class="container mx-auto text-center">
             <h1 class="text-4xl font-bold">Jonathan Gerhardson</h1>
-            <p class="mt-2 text-xl text-gray-300"> "Journalist"t</p>
+            <p class="mt-2 text-xl text-gray-300"> "Journalist"</p>
         </div>
     </header>
 
