--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ Jonathan Gerhardson is a journalist and writer based in Massachuestts. <br>
 <a href="https://muckrack.com/jonathan-gerhardson/articles" class="text-blue-600 hover:text-blue-800">Find my recent bylines here.</a> <br>
 
 I self publish some notes and shoter stories at <a href="https://jonathangerhardson.substack.com" class="text-blue-600 hover:text-blue-800">jonathangerhardson.substack.com</a> <br>
-Browse my publlic records repository at <a href="https://archive.org/details/@jgerhardson" class="text-blue-600 hover:text-blue-800">The Internet Archive</a> <br>
+Browse my public records repository at <a href="https://archive.org/details/@jgerhardson" class="text-blue-600 hover:text-blue-800">The Internet Archive</a> <br>
 Look at some dumb vibe coded software I've made at <a href="https://github.com/JonGerhardson" class="text-blue-600 hover:text-blue-800"> github.com/JonGerhardson</a> <br>
-Follow me on bsky <a href="https://bsky.app/profile/jongerhardson.bsky.social" class="text-blue-600 hover:text-blue-800">@jongerhardson</a> <br>
+Follow me on bsky! <a href="https://bsky.app/profile/jongerhardson.bsky.social" class="text-blue-600 hover:text-blue-800">@jongerhardson</a> <br>
 
       </p>
         </section>
