--- a/irene/index.html
+++ b/irene/index.html
@@ -209,7 +209,7 @@
             "Granby Rd and Montgomery St - 360 - 4": [
                 "Granby Rd and Montgomery St - 360 - 4.mp4"
             ],
-            "Granby Rd and Montgomery St - 360 - PTZ": [
+            "Granby Rd and Montgomery St - PTZ": [
                 "Granby Rd & Montgomery St - 360 - PTZ.mp4"
             ]
             // Add other camera_ids and their associated videos here if needed
