--- a/irene/index.html
+++ b/irene/index.html
@@ -5,18 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicopee Camera & Census Map</title>
 
-    <!-- Favicon -->
-    <!-- Note: 'irene.png' needs to be in the same directory as this HTML file for the favicon to display. -->
     <link rel="icon" type="image/png" href="irene.png">
 
-    <!-- Leaflet.js CSS & Script -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-    <!-- Leaflet.heat Plugin -->
     <script src="https://unpkg.com/leaflet.heat@0.2.0/dist/leaflet-heat.js"></script>
 
-    <!-- Leaflet.markercluster Plugin -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
@@ -42,7 +37,7 @@
             font-size: 1.5em;
             color: #333;
         }
-        .header p.note { /* Style for the new note */
+        .header p.note {
             font-size: 0.85em;
             color: #666;
             margin-top: 5px;
@@ -56,12 +51,20 @@
         .leaflet-popup-content-wrapper {
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            /* Set popup background to transparent white */
+            background: rgba(255, 255, 255, 0.8);
+        }
+        /* Style the popup pointer to match */
+        .leaflet-popup-tip {
+            background: rgba(255, 255, 255, 0.8) !important;
         }
         .leaflet-popup-content {
             margin: 15px;
             font-size: 14px;
             line-height: 1.6;
-            max-width: 300px !important;
+            /* Adjusted max-width for better mobile fit */
+            max-width: 90vw !important; /* Use viewport width for responsiveness */
+            word-wrap: break-word; /* Ensure long words break */
         }
         .popup-header {
             font-weight: bold;
@@ -96,7 +99,6 @@
             opacity: 0.9;
             border: 1px solid #999;
         }
-
 
         /* Custom cluster icon styling */
         .marker-cluster-small { background-color: rgba(241, 211, 87, 0.6); }
@@ -134,28 +136,64 @@
         /* Style for the embedded video player */
         .popup-video {
             width: 100%;
-            max-width: 280px; /* Adjust based on popup max-width */
-            height: auto;
+            height: auto; /* Maintain aspect ratio */
+            max-width: 98%; /* Ensure it fits within the popup */
             margin-top: 10px;
             border-radius: 4px;
+        }
+
+        /* Mobile-specific adjustments */
+        @media (max-width: 768px) {
+            .header {
+                display: none; /* Auto-hide header on mobile */
+            }
+            /* Adjust Leaflet control positions for mobile */
+            .leaflet-control-layers {
+                margin-top: 10px !important;
+                margin-left: 10px !important;
+            }
+            /* Ensure controls don't overlap too much */
+            .leaflet-bottom.leaflet-left {
+                left: 10px !important;
+                bottom: 10px !important;
+            }
+            .leaflet-bottom.leaflet-right {
+                right: 10px !important;
+                bottom: 10px !important;
+            }
+            .legend {
+                font-size: 12px/14px Arial, Helvetica, sans-serif;
+                padding: 4px 6px;
+            }
+            .legend i {
+                width: 14px;
+                height: 14px;
+            }
+            .leaflet-popup-content {
+                max-width: 80vw !important; /* Shrink popup slightly more on mobile */
+            }
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>TKTKTKTKTKTKTKKTK</h1>
-        <p class="note">Note: Camera coordinates are approximate and represent the general location of the camera. <a href="https://github.com/JonGerhardson/JonGerhardson.github.io/tree/main/irene"> "Read about the methodology here."</a> </p>
+        <p class="note"> Map of police surveilence cameras in Chicopee, Massachusetts.<a href="https://github.com/JonGerhardson/JonGerhardson.github.io/tree/main/irene"> "Get the data."</a> </p>
     </div>
     <div id="map"></div>
     <script>
         // --- Initialize the map and set its view to Chicopee, MA coordinates ---
         const map = L.map('map').setView([42.155, -72.59], 13); // Default view, will be updated if target camera found
 
-        // --- Add a base tile layer from OpenStreetMap with a custom class for filtering ---
-        const osmLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        // --- Tile layers for different views ---
+        const normalOsmLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        });
+
+        const darkOsmLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
             className: 'osm-custom-filter' // Assign the custom class here
-        }).addTo(map);
+        }).addTo(map); // Add dark view by default
+
         console.log("Map initialized and base layer added with custom filter class.");
 
         // --- File Paths ---
@@ -209,8 +247,8 @@
             "Granby Rd and Montgomery St - 360 - 4": [
                 "Granby Rd and Montgomery St - 360 - 4.mp4"
             ],
-            "Granby Rd and Montgomery St - PTZ": [
-                "Granby Rd & Montgomery St - 360 - PTZ.mp4"
+            "Granby Rd and Montgomery St - 360 - PTZ": [
+                "Granby Rd and Montgomery St - 360 - PTZ.mp4"
             ]
             // Add other camera_ids and their associated videos here if needed
             // Example: "Another Camera ID": ["video_for_another_camera.mp4"]
@@ -222,15 +260,17 @@
             // Use camera_id as the primary header, fallback to location_name if camera_id is missing
             const header = props.camera_id || props.location_name || "Camera Details";
 
+            // Calculate number of unique viewers
+            const uniqueViewersCount = (props.unique_users_for_this_camera || []).length;
+
             let popupHtml = `
                 <div class="popup-header">${header}</div>
                 <div class="popup-stat"><strong>Location:</strong> ${props.location_name ?? 'N/A'}</div>
                 <div class="popup-stat"><strong>Object Type:</strong> ${props.object_type ?? 'N/A'}</div>
-                <div class="popup-stat"><strong>Total Views:</strong> ${props.total_views_for_this_camera ?? 'N/A'}</div>
-                <div class="popup-stat"><strong>Total Duration:</strong> ${(props.total_duration_minutes_for_this_camera ?? 0).toFixed(2)} min</div>
                 <div class="popup-stat">
-                    <strong>Unique Users:</strong>
-                    <ul class="popup-camera-list">${(props.unique_users_for_this_camera || []).map(u => `<li>${u}</li>`).join('')}</ul>
+                    <strong>Total views:</strong> ${props.total_views_for_this_camera ?? 'N/A'} | 
+                    <strong>Duration:</strong> ${(props.total_duration_minutes_for_this_camera ?? 0).toFixed(2)} min | 
+                    <strong>Viewers:</strong> ${uniqueViewersCount}
                 </div>
             `;
 
@@ -249,7 +289,7 @@
                         </div>
                     `;
                 });
-
+                popupHtml += `<br><small>(Video footage shows views from four lenses of a 360 degree camera plus an additional pan tilt zoom camera.)</small>`;
             }
 
             return popupHtml;
@@ -389,18 +429,18 @@
 
         // --- Helper function for Income Layer Styling ---
         function getColor(d) {
-            // Reverted to original blue color scheme for income overlay
-            return d > 100000 ? '#084081' : // Darkest blue
-                           d > 80000  ? '#a8ddb5' : // Dark blue
-                           d > 60000  ? '#7bccc4' : // Strong blue (for 60k-79k, including ~63k)
-                           d > 45000  ? '#4eb3d3' : // Medium blue
-                           d > 30000  ? '#2b8cbe' : // Light blue-green
-                           d > 15000  ? '#0868ac' : // Light green
-                                        '#e0f3db'; // Very light green
+            // Corrected color scheme for income overlay to match the provided legend image
+            return d > 100000 ? '#e0f3db' : // Very Light Green for $100,000+
+                   d > 80000  ? '#a8ddb5' : // Light Green for $80,000-$99,999
+                   d > 60000  ? '#7bccc4' : // Light Blue-Green for $60,000-$79,999
+                   d > 45000  ? '#4eb3d3' : // Medium Blue for $45,000-$59,999
+                   d > 30000  ? '#2b8cbe' : // Medium Dark Blue for $30,000-$44,999
+                   d > 15000  ? '#0868ac' : // Darker Blue for $15,000-$29,999
+                                '#084081'; // Darkest Blue for $0-$14,999
         }
 
         function styleIncome(feature) {
-            // Defensive check: Ensure feature and its properties exist
+            // Defensive check: Ensure feature and its properties exists
             if (!feature || !feature.properties) {
                 console.warn("styleIncome received an invalid feature or missing properties:", feature);
                 return {
@@ -424,25 +464,33 @@
         // --- Setup Map Controls (Layer Switcher, Legend) ---
         function setupControls() {
             // --- Main Layer Control ---
+            // Changed position to 'topleft' and collapsed for mobile
             const baseMaps = {
-                "Camera Locations": cameraLocationsLayer,
-                "Duration Heatmap": durationHeatmapLayer,
-                "Camera Density Heatmap": cameraDensityHeatmapLayer
+                "Dark View": darkOsmLayer,
+                "Normal View": normalOsmLayer
             };
             const overlayMaps = {
+                "Camera Locations": cameraLocationsLayer,
+                "Duration Heatmap": durationHeatmapLayer,
+                "Camera Density Heatmap": cameraDensityHeatmapLayer,
                 "Median Income": incomeLayer
             };
-            L.control.layers(baseMaps, overlayMaps, { collapsed: false }).addTo(map);
+            const layerControl = L.control.layers(baseMaps, overlayMaps, { collapsed: true, position: 'topleft' }).addTo(map);
 
             // --- Legend Control for Median Income ---
-            const incomeLegend = L.control({position: 'bottomright'});
+            // Changed position to 'bottomleft' for mobile
+            const incomeLegend = L.control({position: 'bottomleft'});
             incomeLegend.onAdd = function (map) {
                 const div = L.DomUtil.create('div', 'info legend');
                 const grades = [0, 15000, 30000, 45000, 60000, 80000, 100000];
-                // Reverted colors for the legend to match the original blue scheme
-               
+                // The colors array for the legend is ordered from lowest income range color to highest
                 const colors = [ '#084081', '#0868ac', '#2b8cbe', '#4eb3d3', '#7bccc4', '#a8ddb5', '#e0f3db' ]
-                let labels = ['<strong>Median Household Income</strong>'];
+                
+                // Added the descriptive text to the legend
+                let labels = [
+                    '<p style="font-size: 0.9em; margin-bottom: 8px;"> <a href="https://github.com/JonGerhardson/JonGerhardson.github.io/tree/main/irene" target="_blank">Get the data.</a></p>',
+                    '<strong>Median Household Income</strong>'
+                ];
 
                 // Loop through income grades and generate a label with a colored square for each
                 for (let i = 0; i < grades.length; i++) {
@@ -453,13 +501,26 @@
                 div.innerHTML = labels.join('<br>');
                 return div;
             };
+            // Add legend to map, but it will be hidden/shown by event listeners
             incomeLegend.addTo(map);
 
-            // --- Removed Heatmap Legend Control ---
-            // The heatmap legend control was removed as per your request.
+            // Initially hide the legend if the income layer is not active by default
+            if (!map.hasLayer(incomeLayer)) {
+                incomeLegend.getContainer().style.display = 'none';
+            }
 
-            // --- Removed Download Control for GeoJSON data ---
-            // The download control was removed as per your request.
+            // Event listeners to toggle legend visibility based on layer activation
+            map.on('layeradd', function(event) {
+                if (event.layer === incomeLayer) {
+                    incomeLegend.getContainer().style.display = 'block';
+                }
+            });
+
+            map.on('layerremove', function(event) {
+                if (event.layer === incomeLayer) {
+                    incomeLegend.getContainer().style.display = 'none';
+                }
+            });
         }
 
         // --- Start the application by loading map data ---
