--- a/irene/index.html
+++ b/irene/index.html
@@ -177,7 +177,7 @@
 </head>
 <body>
     <div class="header">
-        <p class="note"> Map of police surveilence cameras in Chicopee, Massachusetts.<a href="https://github.com/JonGerhardson/JonGerhardson.github.io/tree/main/irene"> "Get the data."</a> </p>
+        <p class="note"> Map of police surveilence cameras in Chicopee, Massachusetts.<a href="https://github.com/JonGerhardson/JonGerhardson.github.io/tree/main/irene"> Get the data.</a> </p>
     </div>
     <div id="map"></div>
     <script>
