--- a/plate-o-matic/index.html
+++ b/plate-o-matic/index.html
@@ -184,7 +184,7 @@
         function setupMusic() {
             if (musicInitialized) return;
             // Replace 'placeholder.wav' with the actual URL to your audio file
-            backgroundMusic = new Audio('gecs.wav');
+            backgroundMusic = new Audio('gecs.mp3');
             backgroundMusic.loop = true;
             musicInitialized = true;
         }
