--- a/plate-o-matic/index.html
+++ b/plate-o-matic/index.html
@@ -23,7 +23,7 @@
         body {
             font-family: 'Mochiy-Pop-One', sans-serif;
             /* Background image placeholder */
-            background-image: url('/home/jon/plate-sanity/Screenshot from 2025-08-23 17-45-08.png');
+            background-image: url('2025-08-23 17-45-08.png');
             background-size: contain;
             
             color: pink;
