--- a/plate-o-matic/index.html
+++ b/plate-o-matic/index.html
@@ -50,6 +50,8 @@
             <h2 class="text-2xl text-pink-500 mt-2">can this plate exist?</h2>
             <p class="text-pink-400 mt-2">Enter a license plate to see if it's a valid format!</p>
             <p class="text-pink-400 mt-2"> Note: This app does not know if a plate number is real or not, if it's registration is expired, or anything of that nature. It uses regex to make sure any given string does not violate the rules set by each U.S. state for lisence plate numbers. It might not even do that correctly. As-is, no warranties. </p>
+                        <p class="text-pink-400 mt-2">Contact:69bqpg@gmail.com</p>
+
         </div>
 
         <!-- Input Section -->
