--- a/plate-o-matic/index.html
+++ b/plate-o-matic/index.html
@@ -12,7 +12,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
             background-image: url('ONBUSINESS.png');
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-attachment: fixed;
             color: #ec4899;
