Fix HTML formatting for masshoLLM link

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Browse my public records repository at <a href="https://archive.org/details/@jge
 Look at some dumb vibe coded software I've made at <a href="https://github.com/JonGerhardson" class="text-blue-600 hover:text-blue-800"> github.com/JonGerhardson</a> <br>
 Follow me on bsky! <a href="https://bsky.app/profile/jongerhardson.bsky.social" class="text-blue-600 hover:text-blue-800">@jongerhardson</a> <br>
 Early experiments with computer generated municipal government meeting reporting at <a href="https://skynet-times.blogspot.com" class="text-blue-600 hover:text-blue-800">The Generative Adversarial News Network (GAN-NET)</a>
-For more recent attempts at trying to automate away any marketable skills I may posess see: <a href="https://github.com/jongerhardson/masshoLLM" class="text-blue-600 hover:text-blue-800">masshoLLM</a>
+<br> For more recent attempts at trying to automate away any marketable skills I may posess see: <a href="https://github.com/jongerhardson/masshoLLM" class="text-blue-600 hover:text-blue-800">masshoLLM</a>
 
                 
 
