Change heading and description in epstein.html
Updated the heading and paragraph text to reflect a new purpose.

--- a/epstein.html
+++ b/epstein.html
@@ -29,10 +29,10 @@
 
     <div class="bg-white rounded-lg shadow-xl p-6 md:p-8 w-full max-w-lg">
         <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 text-center">
-            Name List Lookup
+            Are you in the Epstein files?
         </h1>
         <p class="text-gray-600 mb-6 text-center">
-            Enter a name to check if it's in the list. The check is now case-insensitive.
+            Enter a name to find out. (Currently only about half the names are searchable, working on the rest.)
         </p>
 
         <!-- Search Input and Button -->
