Update search prompt in epstein.html
Removed the note about the search functionality being incomplete.

--- a/epstein.html
+++ b/epstein.html
@@ -32,7 +32,7 @@
             Are you in the Epstein files?
         </h1>
         <p class="text-gray-600 mb-6 text-center">
-            Enter a name to find out. (Currently only about half the names are searchable, working on the rest.)
+            Enter a name to find out. 
         </p>
 
         <!-- Search Input and Button -->
