--- a/epstein.html
+++ b/epstein.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name Lookup</title>
     <!-- Load Tailwind CSS -->
-    <script src="https://cdn/tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Use the Inter font loaded by Tailwind */
         body {
@@ -23,11 +23,27 @@
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
+        
+        /* --- Restored Fade-in animation --- */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        .fade-in-card {
+            animation: fadeIn 0.7s ease-out forwards;
+        }
     </style>
 </head>
 <body class="bg-gray-900 min-h-screen flex items-center justify-center p-4">
 
-    <div class="bg-white rounded-lg shadow-xl p-6 md:p-8 w-full max-w-lg">
+    <!-- Added the fade-in-card class for the animation -->
+    <div class="bg-white rounded-lg shadow-xl p-6 md:p-8 w-full max-w-lg fade-in-card">
         <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4 text-center">
             Are you in the Epstein files?
         </h1>
@@ -69,7 +85,7 @@
         </div>
 
         <!-- Search Counter -->
-        <!-- Changed to text-xs as requested -->
+        <!-- This is text-xs as requested -->
         <div id="counter" class="text-center text-xs text-gray-400 mt-6">
             Total Searches: 0
         </div>
@@ -213,7 +229,7 @@
             try {
                 // Use setDoc to create or overwrite
                 await setDoc(counterRef, { count: currentSearchCount });
-            } catch (error) {
+            } catch (error)
                 console.error("Error updating counter:", error);
                 // If this fails, the local count will be out of sync
                 // On next page load, it will correct itself.
@@ -235,12 +251,12 @@
                 const count = nameMap.get(nameToFind);
                 const timesText = count === 1 ? 'time' : 'times';
                 
-                // --- NEW: Show image with text overlay ---
+                // --- Show image with text overlay, using relative path for bill.jpg ---
                 resultDiv.innerHTML = `
                     <div class="relative w-full max-w-sm rounded-lg overflow-hidden shadow-lg">
-                        <img src="https://placehold.co/400x200/666666/ffffff?text=bill.jpg" 
-                             alt="Placeholder Image" 
-                             onerror="this.src='https://placehold.co/400x200/cccccc/333333?text=Image+Not+Found'"
+                        <img src="bill.jpg" 
+                             alt="Image result" 
+                             onerror="this.src='https://placehold.co/400x200/cccccc/333333?text=Image+Not+Found'; this.alt='Image not found'"
                              class="w-full h-auto object-cover">
                         <div class="absolute inset-0 flex items-center justify-center p-4 bg-black bg-opacity-40">
                             <span class="text-4xl font-bold text-white text-center drop-shadow-md">
