--- a/epstein.html
+++ b/epstein.html
@@ -229,11 +229,11 @@
             try {
                 // Use setDoc to create or overwrite
                 await setDoc(counterRef, { count: currentSearchCount });
-            } catch (error)
+            } catch (error) { // <-- Added opening brace {
                 console.error("Error updating counter:", error);
                 // If this fails, the local count will be out of sync
                 // On next page load, it will correct itself.
-            }
+            } // <-- This brace now correctly closes the catch block
         }
 
         // Function to check the name, called by the button
@@ -255,7 +255,6 @@
                 resultDiv.innerHTML = `
                     <div class="relative w-full max-w-sm rounded-lg overflow-hidden shadow-lg">
                         <img src="bill.jpg" 
-                             alt="Image result" 
                              class="w-full h-auto object-cover">
                         <div class="absolute inset-0 flex items-center justify-center p-4 bg-black bg-opacity-40">
                             <span class="text-4xl font-bold text-white text-center drop-shadow-md">
