Add disclaimer to total searches display
Added disclaimer to search counter display.

--- a/epstein.html
+++ b/epstein.html
@@ -88,6 +88,7 @@
         <!-- This is text-xs as requested -->
         <div id="counter" class="text-center text-xs text-gray-400 mt-6">
             Total Searches: 0
+        </p> (For entertainment purposes only may not be accurate)
         </div>
     </div>
 
