Fix HTML structure for action links

--- a/demo_search.html
+++ b/demo_search.html
@@ -304,7 +304,7 @@
             <div class="actions">
                 <a href="https://www.town.medfield.net/AgendaCenter/ViewFile/Agenda/_01062026-4723" class="btn"
                     target="_blank">Download Original PDF</a>
-                <a href="https://www.town.medfield.net/AgendaCenter/ViewFile/Agenda/_01062026-4723"
+                <a href="https://www.town.medfield.net/AgendaCenter/"
                     class="btn btn-secondary" target="_blank">All Meeting Materials</a>
             </div>
         </div>
