Add update notice to index.html
Added an update notice regarding the 'First Seen' column functionality.

--- a/wexmac/index.html
+++ b/wexmac/index.html
@@ -540,6 +540,7 @@ color: white;
                 <p class="subtitle">Explore task orders issued under the Naval Supply Systems Command
  <a href="https://sam.gov/workspace/contract/opp/fc38d5a3e2b049f6ab71ef32b113e003/view" target="_blank" style="color: white; text-decoration: underline;">WEXMAC 2.2 TITUS</a> contract vehicle, updated daily.</p> 
                 <p class="subtitle">Made by  <a href="https://jongerhardson.github.io" target="_blank" style="color: white; text-decoration: underline;">Jonathan Gerhardson</a> | jon.gerhardson@proton.me</p>
+                <p> UPDATE: Feb 12 - Ignore the "First Seen" column, it seems to not be working correctly, I'll fix it in a future update.</p>
             </div>
             <div class="header-actions">
                 <div class="export-menu">
