--- a/work_portfolio/index.html
+++ b/work_portfolio/index.html
@@ -653,7 +653,7 @@
                     <div class="lb-wrap" id="lb-9"><a href="#_" class="lb-close" aria-label="Close"></a><a href="#lb-9" class="tool-visual"><img src="code/Screenshot from 2026-02-15 15-26-55.png"
                             alt="Mass.gov update bot Bluesky profile with daily posts"></a></div>
                     <div class="tool-info">
-                        <h3><a href="https://github.com/JonGerhardson/mapoli" target="_blank" rel="noopener">Mass.gov
+                        <h3><a href="https://bsky.app/profile/massgovupdatesbot.bsky.social" target="_blank" rel="noopener">Mass.gov
                                 Update Bot</a></h3>
                         <div class="tool-sub">@massgovupdatesbot.bsky.social · Python</div>
                         <p>Scrapes mass.gov/sitemap.xml daily and posts a summary of updated pages to Bluesky. Tracks
