--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
-Journalist in western Massachusetts
+<Html 
+  
+  Journalist in western Massachusetts
 
-jon.gerhardson@proton.me
-https://bsky.app/profile/jongerhardson.bsky.social 
+j
 
-https://jongerhardson.github.io/work_portfolio/ 
+
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="style.css" rel="stylesheet" />
+</head>
+<body>
+on.gerhardson@proton.me <br>
+https://bsky.app/profile/jongerhardson.bsky.social <br> <br> 
+
+<a href="https://jongerhardson.github.io/work_portfolio/">Some stuff I've done</a> <br> <br> <br> 
 
 
 Things I made that are also hosted on this page: 
 
-Chicopee Axon Fusus Map (July 2025)
-https://jongerhardson.github.io/irene/
+<br>
+<a href="https://jongerhardson.github.io/irene/">Chicopee Axon Fusus Map (July 2025)</a> <br> 
+  
+(February 2026)
+<a href="https://jongerhardson.github.io/mass_opioid_settlement_data/#statewide">Massachusetts opioid settlement funds data dashboard FY2023-FY2025</a> 
+  <br> <br> 
 
-Massachusetts opioid settlement funds data dashboard FY2023-FY2025 (February 2026)
-https://jongerhardson.github.io/mass_opioid_settlement_data/#statewide
-
-Naval Supply Systems Command (NAVSUP) Worldwide Expeditionary Multiple Award Contract (WEXMAC) 2.2 Territorial Integrity of the United States (TITUS) task order tracker (Ongoing)
-https://jongerhardson.github.io/wexmac/
+<a href="https://jongerhardson.github.io/wexmac/"{>Naval Supply Systems Command (NAVSUP) Worldwide Expeditionary Multiple Award Contract (WEXMAC) 2.2 Territorial Integrity of the United States (TITUS) task order tracker</a>  (Ongoing)
+</body>
+</html>
