--- a/index.html
+++ b/index.html
@@ -2,18 +2,7 @@
   
   Journalist in western Massachusetts
 
-j
-
-
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link href="style.css" rel="stylesheet" />
-</head>
-<body>
-on.gerhardson@proton.me <br>
+<a href="mailto:jon.gerhardson@proton.me">jon.gerhardson@proton.me</a> <br>
 https://bsky.app/profile/jongerhardson.bsky.social <br> <br> 
 
 <a href="https://jongerhardson.github.io/work_portfolio/">Some stuff I've done</a> <br> <br> <br> 
@@ -22,12 +11,15 @@ https://bsky.app/profile/jongerhardson.bsky.social <br> <br>
 Things I made that are also hosted on this page: 
 
 <br>
-<a href="https://jongerhardson.github.io/irene/">Chicopee Axon Fusus Map (July 2025)</a> <br> 
+<a href="https://jongerhardson.github.io/irene/">Chicopee Axon Fusus Map (July 2025)</a> <br> <br> 
+
   
 (February 2026)
 <a href="https://jongerhardson.github.io/mass_opioid_settlement_data/#statewide">Massachusetts opioid settlement funds data dashboard FY2023-FY2025</a> 
   <br> <br> 
 
 <a href="https://jongerhardson.github.io/wexmac/"{>Naval Supply Systems Command (NAVSUP) Worldwide Expeditionary Multiple Award Contract (WEXMAC) 2.2 Territorial Integrity of the United States (TITUS) task order tracker</a>  (Ongoing)
+  <br> <br> 
+
 </body>
 </html>
