--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@ https://bsky.app/profile/jongerhardson.bsky.social <br> <br>
 Things I made that are also hosted on this page: 
 
 <br>
-<a href="https://jongerhardson.github.io/irene/">Chicopee Axon Fusus Map (July 2025)</a> <br> <br> 
+<a href="https://jongerhardson.github.io/irene/">Chicopee Axon Fusus Map </a> (July 2025)<br> <br> 
 
-  
-(February 2026)
+  (February 2026)
 <a href="https://jongerhardson.github.io/mass_opioid_settlement_data/#statewide">Massachusetts opioid settlement funds data dashboard FY2023-FY2025</a> 
+
   <br> <br> 
 
-<a href="https://jongerhardson.github.io/wexmac/"{>Naval Supply Systems Command (NAVSUP) Worldwide Expeditionary Multiple Award Contract (WEXMAC) 2.2 Territorial Integrity of the United States (TITUS) task order tracker</a>  (Ongoing)
-  <br> <br> 
+<a href="https://jongerhardson.github.io/wexmac/"{>Naval Supply Systems Command (NAVSUP) Worldwide Expeditionary Multiple Award Contract (WEXMAC) 2.2 Territorial Integrity of the United States (TITUS) task order tracker</a> <br>(
+  February 2026)
 
 </body>
 </html>
