--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@ Things I made that are also hosted on this page:
 <br>
 <a href="https://jongerhardson.github.io/irene/">Chicopee Axon Fusus Map </a> (July 2025)<br> <br> 
 
-  (February 2026)
-<a href="https://jongerhardson.github.io/mass_opioid_settlement_data/#statewide">Massachusetts opioid settlement funds data dashboard FY2023-FY2025</a> 
+<a href="https://jongerhardson.github.io/mass_opioid_settlement_data/#statewide">Massachusetts opioid settlement funds data dashboard FY2023-FY2025</a> (February 2026)
 
   <br> <br> 
 
