--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <a href="mailto:jon.gerhardson@proton.me">jon.gerhardson@proton.me</a> <br>
 https://bsky.app/profile/jongerhardson.bsky.social <br> <br> 
 
-<a href="https://jongerhardson.github.io/work_portfolio/">Some stuff I've done</a> <br> <br> <br> 
+<a href="https://jongerhardson.github.io/work_portfolio/">Click here to view some of my past work</a> <br> <br> <br> 
 
 
 Things I made that are also hosted on this page: 
