--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<Html 
-  
-  Journalist in western Massachusetts
+<Html>
+  Jonathan Gerhardson is a journalist in western Massachusetts
 
 <a href="mailto:jon.gerhardson@proton.me">jon.gerhardson@proton.me</a> <br>
-https://bsky.app/profile/jongerhardson.bsky.social <br> <br> 
+<a href="https://bsky.app/profile/jongerhardson.bsky.social">Bluesky</a> <br> <br> 
 
 <a href="https://jongerhardson.github.io/work_portfolio/">Click here to view some of my past work</a> <br> <br> <br> 
 
